# goldfish

./: README.md
server/src/core/: CMakeLists.txt
server/src/core/finders/: AbstractFinder.h  OgWindFinder.h  finder_bridge.cpp  main.cpp
server/src/core/generators/: OgWindPrecomputeGenerator.h
server/src/core/lib/RP/: RPGolWindSet.cpp  RPGolWindSet.h  RPUtlRandom.cpp
